<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MenuActivity">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/menu_profile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="100"
        android:title="@string/menu_statistics"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
</menu>