<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:theme="@style/AppTheme"
        app:popupTheme="@style/AppTheme"
        android:elevation="4dp"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonCat1"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:background="@drawable/button_cancel"
        android:drawableStart="@drawable/icono_ingresos"
        android:padding="12dp"
        android:text="@string/nameCat1"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/buttonCat2"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:background="@drawable/button_cancel"
        android:drawableStart="@drawable/icono_comidas"
        android:padding="12dp"
        android:text="@string/nameCat2"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149" />

    <Button
        android:id="@+id/buttonCat3"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:background="@drawable/button_cancel"
        android:drawableStart="@drawable/icono_ocio"
        android:padding="12dp"
        android:text="@string/nameCat3"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <Button
        android:id="@+id/buttonCat4"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:background="@drawable/button_cancel"
        android:drawableStart="@drawable/icono_casa"
        android:padding="12dp"
        android:text="@string/nameCat4"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <Button
        android:id="@+id/buttonCat5"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:background="@drawable/button_cancel"
        android:drawableStart="@drawable/icono_transporte"
        android:padding="12dp"
        android:text="@string/nameCat5"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464" />

    <Button
        android:id="@+id/buttonCat6"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:background="@drawable/button_cancel"
        android:drawableStart="@drawable/icono_otros"
        android:padding="12dp"
        android:text="@string/nameCat6"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.463" />

    <TextView
        android:id="@+id/textViewTotalMenu"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="55dp"
        android:text="@string/textviewTotalMenu"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTotalNumberMenu"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="444dp"
        android:textAlignment="viewEnd"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAddConcept"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/button_ok"
        android:text="+"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>